| Bug #30764 | Incorrect assertion in ACC_SAFE_LOCK in testBlobs | ||
|---|---|---|---|
| Submitted: | 3 Sep 2007 6:00 | Modified: | 15 Sep 2007 11:25 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[3 Sep 2007 6:00]
Jonas Oreland
[3 Sep 2007 6:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/33571 ChangeSet@1.2552, 2007-09-03 08:15:59+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#30764 When adding a read to lock queue, where there is a X-lock ahead, upgrade to X-lock (found by pekkas blob changes)
[7 Sep 2007 19:10]
Jon Stephens
Documented bugfix in mysql-5.1.22-ndb-6.2.5 changelog as
When handling <literal>BLOB</literal> columns, the addition
of read locks to the lock queue was not handled correctly.
(Bug #30764)
Left in PP status for merge to mainline.
[14 Sep 2007 16:25]
Bugs System
Pushed into 5.1.23-beta
[15 Sep 2007 11:25]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Now also documented in 5.1.23 changelog.
