ndb - bug#30764   When adding a read to lock queue, where there is a X-lock ahead, upgrade to X-lock   (found by pekkas blob changes)